samples/_failures_safe/1761349185_456a97_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2867c4bc.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_2867c4bc.c:166:5: error: expected expression at end of input
  166 |     if (input == NULL ||
      |     ^~
./samples/SAFE/__tmp_2867c4bc.c:166:5: error: expected declaration or statement at end of input
